Dremio Stress JDBC support (#27)
JDBC Support

* jdk8 compatible and directions
* cleaner error handling
* updated Docker image
* updated docs